# jank-drone

./: .gitignore  LICENSE  WORKSPACE  flake.nix
hello_world/: BUILD.bazel  main.cc
nix/: activate  update
toolchain/: BUILD.bazel  rules.bzl
tools/: bazel.rc
tools/workspace/rpi_bazel/: repository.bzl
