load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "hello_world",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "hello_world_arm",
    srcs = ["main.cc"],
    target_compatible_with = [
        "@platforms//cpu:arm64",
    ],
    visibility = ["//visibility:public"],
)
